# study-django

./: .gitignore  README.md  pyproject.toml
.github/workflows/: 01-start.yaml  02-build.yaml  build.yaml  cache-node.yaml  cache-python.yaml  cache-python.yaml~  cache-rye.yaml
quick_start_01/: 01.md  manage.py
quick_start_01/quick_start_01/: settings.py
show_data_02/: manage.py
show_data_02/show_data_02/: asgi.py  wsgi.py
src/drf_03/: 03.md  db.sqlite3  manage.py
src/drf_03/book/: models.py  serializer.py  urls.py  views.py
src/drf_03/book/migrations/: 0001_initial.py
src/drf_03/drf_03/: asgi.py  settings.py  urls.py  wsgi.py
src/drf_03/static/: index-B7i0P6ID.css  index-iImuRxqD.js
src/drf_03/templates/: index.html
src/quick_start_01/: db.sqlite3
src/quick_start_01/quick_start_01/: asgi.py  urls.py  wsgi.py
src/show_data_02/: 02.md  db.sqlite3  manage.spec
src/show_data_02/goods/: models.py  urls.py  views.py
src/show_data_02/goods/migrations/: 0001_initial.py
src/show_data_02/show_data_02/: settings.py  urls.py
src/show_data_02/static/: index-BHgniQsf.js
src/show_data_02/templates/: index.html
