[project]
name = "study-django"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "qe-present", email = "2664481691@qq.com" }
]
dependencies = [
    "django>=5.1.6",
]
readme = "README.md"
requires-python = ">= 3.13"

[tool.rye.scripts]
dev = "python manage.py runserver"
build="pyinstaller -F manage.py"


